# ipor-abi

./: .gitignore  CODEOWNERS  README.md
goerli/: ipor-protocol-addresses.json
goerli/ipor-power-tokens/: addresses.json
goerli/ipor-protocol/: addresses.json
goerli/pretty/: AmmPoolsServiceEth.abi.json
goerli/ugly/: AmmTreasuryEth.abi.json  IIporProtocol.abi.json  IporProtocolRouter.abi.json  OraclePublisher.abi.json
mainnet/: addresses.json  ipor-protocol-addresses.json
mainnet/ipor-algorithm-facade/: addresses.json
mainnet/ipor-power-tokens/: addresses.json
mainnet/ipor-protocol/: addresses.json
mainnet/mainnet-arbitrum/: addresses.json
mainnet/mainnet-arbitrum-clearstar/: addresses.json
mainnet/mainnet-arbitrum-fusion/: addresses.json
mainnet/mainnet-arbitrum-harvest/: addresses.json
mainnet/mainnet-arbitrum-pistachio/: addresses.json
mainnet/mainnet-avalanche-fusion/: addresses.json
mainnet/mainnet-base/: addresses.json
mainnet/mainnet-base-clearstar/: addresses.json
mainnet/mainnet-base-fusion/: addresses.json
mainnet/mainnet-base-harvest/: addresses.json
mainnet/mainnet-base-pistachio/: addresses.json
mainnet/mainnet-base-tanken/: addresses.json
mainnet/mainnet-base-tesseract/: addresses.json
mainnet/mainnet-base-xerberus/: addresses.json
mainnet/mainnet-ethereum/: addresses.json
mainnet/mainnet-ethereum-alphaping/: addresses.json
mainnet/mainnet-ethereum-blockchain-com/: addresses.json
mainnet/mainnet-ethereum-fortunafi/: addresses.json
mainnet/mainnet-ethereum-fusion/: addresses.json
mainnet/mainnet-ethereum-harvest/: addresses.json
mainnet/mainnet-ethereum-mev-capital/: addresses.json
mainnet/mainnet-ethereum-pistachio/: addresses.json
mainnet/mainnet-ethereum-supr-sports/: addresses.json
mainnet/mainnet-ethereum-tau/: addresses.json
mainnet/mainnet-ethereum-tesseract/: addresses.json
mainnet/mainnet-ethereum-valos/: addresses.json
mainnet/mainnet-ink-fusion/: addresses.json
mainnet/mainnet-katana-fusion/: addresses.json
mainnet/mainnet-plasma-fusion/: addresses.json
mainnet/mainnet-tac-fusion/: addresses.json
mainnet/mainnet-unichain-fusion/: addresses.json
mainnet/mainnet-unichain-k3/: addresses.json
mainnet/pretty/: AmmGovernanceService.abi.json  AmmOpenSwapService.abi.json  IIporProtocol.abi.json  ISpreadRouter.abi.json  PowerTokenLens.abi.json  SpreadStorageLibs.abi.json
mainnet/ugly/: PowerTokenLens.abi.json
scripts/: fill-addresses.sh  shared_utils.py
scripts/fill-factory-vaults/: .env.example  README.md  fill-factory-vaults.py  fill-factory-vaults.sh  pyproject.toml
scripts/fill-fuses/: .env.example  .gitignore  README.md  fill-fuses.py  fill-fuses.sh  pyproject.toml
scripts/fill-prehooks/: .env.example  README.md  fill-prehooks.py  fill-prehooks.sh  pyproject.toml
scripts/fill-price-feeds/: .env.example  README.md  fill-price-feeds.py  fill-price-feeds.sh  pyproject.toml
scripts/fill-vaults/: README.md  fill-vaults.py  fill-vaults.sh  pyproject.toml
scripts/find-abi/: .env.example  .gitignore  README.md  find-abi.sh
(+856 files in other folders)
