[tool.poetry]
name = "fill-fuses"
version = "0.1.0"
description = "Script to fill fuses"
authors = ["IPOR Labs AG"]

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fill-fuses = "fill-fuses.py"
