[tool.poetry]
name = "fill-fuses"
version = "0.1.0"
description = "Script to fill fuses"
authors = ["IPOR Labs AG"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
web3 = "^7.8.0"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fill-fuses = "fill-fuses.py"
